# advent_of_code

./: .gitignore  .gitmodules  README.md
2015/day01/: day01.go
2015/day02/: day02.go
2015/day03/: day3.go
2015/day04/: day04.go
2015/day05/: day5.go  day5_test.go
2015/day06/: day6.go
2015/day07/: day7.go
2015/day08/: day8.go
2015/day09/: day9.go
2015/day10/: day10.go  day10_test.go
2015/day11/: day11.go
2015/day12/: day12.go
2015/day13/: day13.go
2015/day14/: day14.go  day14_test.go
2015/day15/: day15.go  day15_test.go
2015/day16/: day16.go
2015/day17/: day17.go  day17_test.go
2015/day21/: item.go  main.go
2015/day22/: boss.go  main.go  spell.go
2015/day24/: main.go
2015/day25/: main_test.go
2015_go/day03/: day3.go
2015_go/day06/: day6.go
2015_go/day08/: day8.go
2015_go/day10/: day10.go
2015_go/day11/: day11_test.go
2015_go/day13/: day13.go
2015_go/day14/: day14.go
2015_go/day15/: day15.go  day15_test.go
2015_go/day17/: day17.go  day17_test.go
2015_go/day18/: main.go
2015_go/day19/: main.go
2015_go/day20/: main.go
2015_go/day21/: player.go
2015_go/day22/: player.go
2015_go/day23/: main.go
2015_go/day25/: main.go
2016/day02/: day02.go  day02_test.go
2016/day03/: day03.go
2016/day04/: main.go  main_test.go
2016/day06/: main_test.go
2016/day07/: main_test.go
2016/day09/: main.go  main_test.go
2016/day10/: main.go  main_test.go
2016/day20/: main.go  main_test.go
2016_go/day01/: day01.go  day01_test.go
2016_go/day05/: main.go  main_test.go
2016_go/day06/: main.go
2016_go/day07/: main.go
2016_go/day08/: main.go  main_test.go
2016_go/day09/: main.go  main_test.go
2016_go/day10/: main.go  main_test.go
2017_rust/day03/src/: main.rs
2017_rust/src/: lib.rs
2018_cpp/: .gitignore  CMakeLists.txt
2018_cpp/include/: aoc.hpp
2018_cpp/src/: day1.cpp  day2.cpp  main.cpp
2018_cpp/tests/: CMakeLists.txt  tests.cpp
2020_cpp/: CMakeLists.txt  main.cpp
2020_cpp/include/: solution.hpp
2020_cpp/src/: CMakeLists.txt  day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  solution.cpp
2023/day02/: day02.go
2023/day04/: day04.go
2023/day05/: day05.go
2023/day06/: day06.go
2023/day07/: day07.go
2023/day08/: day08.go
2023/day09/: day09.go
2023/day10/: day10.go
2023/day10/output/: 10.txt  10_big.txt
2023/day11/: day11.go
2023/day12/: day12.go
2023/day13/: day13.go
2023/day14/: day14.go
2023/day15/: day15.go
2023/day16/: day16.go
2023/day17/: day17.go  day17_test.go
2023/day18/: day18.go  day18_test.go
2023/day19/: day19.go  day19_test.go
2023/day20/: day20.go  day20_test.go
2023/day21/: day21.go  day21.ipynb  day21_cheat.go  day21_test.go
2023/day22/: day22.go  day22_test.go
2023/day23/: day23.go
2023_go/day01/: day01.go
2023_go/day03/: day03.go
2023_go/day04/: day04.go
2023_go/day05/: day05.go
2023_go/day09/: day09.go  day09_test.go
2023_go/day11/: day11.go
2023_go/day12/: day12.go  day12_test.go
2023_go/day14/: day14.go
2023_go/day15/: day15.go  day15_test.go
2023_go/day16/: day16.go
2023_go/day17/: day17.go  day17_test.go
2023_go/day18/: day18.go  day18_test.go
2023_go/day19/: day19_test.go
2023_go/day20/: day20.go
2023_go/day22/: day22.go
2023_go/day23/: day23.go  day23_test.go
2024/: CMakeLists.txt
2024/include/: solution.hpp
2024/src/: day1.cpp  day11.cpp  day2.cpp  day3.cpp  day5.cpp  day6.cpp  day7.cpp  day9.cpp  dayX.cpp  main.cpp
aoctool/: go.mod  main.go
aoctool/cmd/: root.go
cmd/: template.go
cmd/template/: main.go  main_test.go
cpp/: CMakeLists.txt
cpp/include/: grid.hpp  solution.hpp
cpp/src/: CMakeLists.txt  day10.cpp  day3.cpp  day4.cpp  day7.cpp  day8.cpp  dayX.cpp  main.cpp
cpp/src/2016/: day11.cpp
cpp/src/2018/: day1.cpp  day2.cpp
cpp/src/2019/: day1.cpp  day2.cpp
cpp/src/2020/: day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp
cpp/src/2021/: day1.cpp
cpp/src/2023/: day17.cpp
cpp/src/2024/: day1.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16 copy.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day21_first_attempt.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day4.cpp
input/: README.md
input/test/: 2024_11_2.txt
tools/: go.mod
tools/cmd/: getday.go  getyear.go
util/: main.go
