cmake_minimum_required(VERSION 3.25)

project(AoC)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_CXX_FLAGS "-Wall")

include_directories(include)

add_executable(2024_1 src/main.cpp src/2024/day1.cpp)
add_executable(2024_2 src/main.cpp src/2024/day2.cpp)
add_executable(2024_3 src/main.cpp src/2024/day3.cpp)
add_executable(2024_4 src/main.cpp src/2024/day4.cpp)
add_executable(2024_5 src/main.cpp src/2024/day5.cpp)
add_executable(2024_6 src/main.cpp src/2024/day6.cpp)
add_executable(2024_7 src/main.cpp src/2024/day7.cpp)
add_executable(2024_8 src/main.cpp src/2024/day8.cpp)
add_executable(2024_9 src/main.cpp src/2024/day9.cpp)
add_executable(2024_10 src/main.cpp src/2024/day10.cpp)
add_executable(2024_11 src/main.cpp src/2024/day11.cpp)
add_executable(2024_12 src/main.cpp src/2024/day12.cpp)
add_executable(2024_13 src/main.cpp src/2024/day13.cpp)
add_executable(2024_14 src/main.cpp src/2024/day14.cpp)
add_executable(2024_15 src/main.cpp src/2024/day15.cpp)
add_executable(2024_16 src/main.cpp src/2024/day16.cpp)
add_executable(2024_17 src/main.cpp src/2024/day17.cpp)
add_executable(2024_18 src/main.cpp src/2024/day18.cpp)
add_executable(2024_19 src/main.cpp src/2024/day19.cpp)
add_executable(2024_20 src/main.cpp src/2024/day20.cpp)
add_executable(2024_21 src/main.cpp src/2024/day21.cpp)
add_executable(2024_22 src/main.cpp src/2024/day22.cpp)
add_executable(2024_23 src/main.cpp src/2024/day23.cpp)
add_executable(2024_24 src/main.cpp src/2024/day24.cpp)
add_executable(2024_25 src/main.cpp src/2024/day25.cpp)

add_executable(2023_17 src/main.cpp src/2023/day17.cpp)

add_executable(2020_1 src/main.cpp src/2020/day1.cpp)
add_executable(2020_2 src/main.cpp src/2020/day2.cpp)
add_executable(2020_3 src/main.cpp src/2020/day3.cpp)
add_executable(2020_4 src/main.cpp src/2020/day4.cpp)
add_executable(2020_5 src/main.cpp src/2020/day5.cpp)
add_executable(2020_6 src/main.cpp src/2020/day6.cpp)
add_executable(2020_7 src/main.cpp src/2020/day7.cpp)

add_executable(2018_1 src/main.cpp src/2018/day1.cpp)
add_executable(2018_2 src/main.cpp src/2018/day2.cpp)
