add_executable(day1 main.cpp day1.cpp)
add_executable(day2 main.cpp day2.cpp)
add_executable(day3 main.cpp day3.cpp)
add_executable(day4 main.cpp day4.cpp)
add_executable(day5 main.cpp day5.cpp)
add_executable(day6 main.cpp day6.cpp)
# add_executable(day7 main.cpp day7.cpp)
# add_executable(day8 main.cpp day8.cpp)
# add_executable(day9 main.cpp day9.cpp)
# add_executable(day10 main.cpp day10.cpp)
# add_executable(day11 main.cpp day11.cpp)
# add_executable(day12 main.cpp day12.cpp)
# add_executable(day13 main.cpp day13.cpp)
# add_executable(day14 main.cpp day14.cpp)
# add_executable(day15 main.cpp day15.cpp)
# add_executable(day16 main.cpp day16.cpp)
# add_executable(day17 main.cpp day17.cpp)
# add_executable(day18 main.cpp day18.cpp)
# add_executable(day19 main.cpp day19.cpp)
# add_executable(day20 main.cpp day20.cpp)
# add_executable(day21 main.cpp day21.cpp)
# add_executable(day22 main.cpp day22.cpp)
# add_executable(day23 main.cpp day23.cpp)
# add_executable(day24 main.cpp day24.cpp)
# add_executable(day25 main.cpp day25.cpp)
