add_executable(2024_1 main.cpp 2024/day1.cpp)
add_executable(2024_2 main.cpp 2024/day2.cpp)
add_executable(2024_3 main.cpp 2024/day3.cpp)
add_executable(2024_4 main.cpp 2024/day4.cpp)
add_executable(2024_5 main.cpp 2024/day5.cpp)
add_executable(2024_6 main.cpp 2024/day6.cpp)
add_executable(2024_7 main.cpp 2024/day7.cpp)
add_executable(2024_8 main.cpp 2024/day8.cpp)
add_executable(2024_9 main.cpp 2024/day9.cpp)
add_executable(2024_10 main.cpp 2024/day10.cpp)
add_executable(2024_11 main.cpp 2024/day11.cpp)
add_executable(2024_12 main.cpp 2024/day12.cpp)
add_executable(2024_13 main.cpp 2024/day13.cpp)

add_executable(2023_17 main.cpp 2023/day17.cpp)
